# GameOfLife

GameOfLife-main/: CMakeLists.txt
GameOfLife-main/include/: AlwaysNextTurn.hpp  BoardTypeCylinder.hpp  BoardTypeTorus.hpp  CommandSource.hpp  GameOfLifeController.hpp  GameOfLifeGrid.hpp  UserCommands.hpp
GameOfLife-main/src/: AlwaysNextTurn.cpp  BoardTypeCylinder.cpp  BoardTypeTorus.cpp  GameOfLifeController.cpp  GameOfLifeGrid.cpp  UserCommands.cpp  main.cpp
